load("@bazel_skylib//rules:common_settings.bzl", "string_flag")
load(
    ":aspects.bzl",
    "action_edges_node",
    "action_edges_reader",
    "aspect_reader",
    "composed_reader",
    "dict_node",
    "dict_reader",
    "marked_node",
    "marked_reader",
    "node",
    "probe_toolchain",
    "toolchain_probe_reader",
)
load(
    ":defs.bzl",
    "attr_transitioned_reader",
    "repo_info",
    "self_transitioned_reader",
    "setting_reader",
    "transitioned_mode_aspect_reader",
    "verify_native_apis",
)

string_flag(
    name = "mode",
    build_setting_default = "default",
)

repo_info(
    name = "repo_info",
    numbers = [4, 5, 6],
)

genrule(
    name = "hello",
    outs = ["hello.txt"],
    cmd = "echo 'Hello from patched bonanza' > $@",
)

# setting_reader's "setting" attribute carries an
# analysis_test_transition() that overrides //:mode, so the output
# must contain the transitioned value instead of the default.
setting_reader(
    name = "transitioned_mode",
    setting = ":mode",
)

# The user-defined transition on attr_transitioned_reader's "setting"
# attribute reads the sibling "mode" attribute, so the dependency must
# observe //:mode being derived from its literal value.
attr_transitioned_reader(
    name = "attr_transitioned",
    mode = "sibling",
    setting = ":mode",
)

# self_transitioned_reader carries the same transition as its incoming
# edge transition, so the target's own configuration must have //:mode
# derived from the "mode" attribute.
self_transitioned_reader(
    name = "self_transitioned",
    mode = "incoming",
)

# transitioned_mode_aspect rematerializes ctx.rule.attr of
# :attr_transitioned, which reapplies the attr-reading transition on
# its "setting" attribute.
transitioned_mode_aspect_reader(
    name = "aspect_transitioned",
    dep = ":attr_transitioned",
)

verify_native_apis()

# A diamond dependency graph walked by collector_aspect. The aspect
# merges postorder depsets of labels; the leaf must be deduplicated
# even though it is reachable via both mid_a and mid_b.
node(name = "leaf")

node(
    name = "mid_a",
    deps = [":leaf"],
)

node(
    name = "mid_b",
    deps = [":leaf"],
)

node(
    name = "top",
    deps = [
        ":mid_a",
        ":mid_b",
    ],
)

aspect_reader(
    name = "aspect_labels",
    deps = [":top"],
)

# collector_aspect must also propagate across the values of the
# "tools" attr, which is an attr.string_keyed_label_dict().
dict_node(
    name = "dict_top",
    tools = {"a": ":mid_a"},
)

aspect_reader(
    name = "dict_node_labels",
    deps = [":dict_top"],
)

# The dict_reader rule attaches collector_aspect to the values of its
# string_keyed_label_dict attribute and exposes them as a
# {string: Target} dict through ctx.attr.
dict_reader(
    name = "dict_labels",
    tools = {
        "first": ":mid_a",
        "second": ":leaf",
    },
)

# marked_collector_aspect has required_providers = [MarkerInfo], so it
# must only be applied to marked_node() targets and must not propagate
# through :plain_mid. :marked_leaf must therefore not be collected,
# without :plain_mid causing an analysis error.
marked_node(name = "marked_leaf")

node(
    name = "plain_mid",
    deps = [":marked_leaf"],
)

marked_node(name = "marked_inner")

marked_node(
    name = "marked_mid",
    deps = [":marked_inner"],
)

marked_node(
    name = "marked_top",
    deps = [
        ":marked_mid",
        ":plain_mid",
    ],
)

marked_reader(
    name = "marked_labels",
    deps = [":marked_top"],
)

# c_aspect requires b_aspect, which in turn requires a_aspect. The
# composed output proves that required aspects are applied to the same
# targets first and that their providers are visible on both the target
# argument and the target's dependencies.
composed_reader(
    name = "composed_aspects",
    deps = [":mid_a"],
)

# toolchain_probe_aspect declares a mandatory toolchain type with a
# registered implementation and an optional one without. Both must be
# observable through ctx.toolchains inside the aspect's implementation
# function.
toolchain_type(name = "aspect_toolchain_type")

toolchain_type(name = "optional_toolchain_type")

probe_toolchain(
    name = "probe_toolchain_impl",
    value = "probe-value",
)

toolchain(
    name = "probe_toolchain",
    toolchain = ":probe_toolchain_impl",
    toolchain_type = ":aspect_toolchain_type",
)

toolchain_probe_reader(
    name = "toolchain_probe",
    deps = [":leaf"],
)

# action_edges_aspect observes the actions registered by
# action_edges_node through target.actions. The report must show the
# FileWrite mnemonic for write(), the Symlink mnemonic for both
# flavors of symlink(), and output Files whose is_directory and
# is_symlink properties match the declaration.
action_edges_node(name = "action_edges_node")

action_edges_reader(
    name = "action_edges",
    deps = [":action_edges_node"],
)

# Verifies, on the worker, that the artifacts produced by the targets
# above have the expected contents. If any assertion fails, the build
# fails.
genrule(
    name = "verify_repo_conformance",
    srcs = ["@conformance//:results.txt"],
    outs = ["verify_repo_conformance.txt"],
    cmd = "if grep -v '=ok' $(location @conformance//:results.txt); then echo 'repository_ctx conformance failures above'; exit 1; fi && cp $(location @conformance//:results.txt) $@",
)

genrule(
    name = "verify",
    srcs = [
        ":action_edges",
        ":aspect_labels",
        ":aspect_transitioned",
        ":attr_transitioned",
        ":composed_aspects",
        ":dict_labels",
        ":dict_node_labels",
        ":hello",
        ":marked_labels",
        ":repo_info",
        ":self_transitioned",
        ":toolchain_probe",
        ":transitioned_mode",
    ],
    outs = ["verify.txt"],
    cmd = "grep -q 'top: \\[@@testproject+//:leaf, @@testproject+//:mid_a, @@testproject+//:mid_b, @@testproject+//:top\\]' $(location :aspect_labels) && " +
          "grep -qF '@@testproject+//:top marker=@@testproject+//:leaf fmt=plain' $(location :aspect_labels) && " +
          "grep -qF 'C(A(@@testproject+//:mid_a) | A(@@testproject+//:mid_a) deps=[A(@@testproject+//:leaf)])' $(location :composed_aspects) && " +
          "grep -qF 'first -> @@testproject+//:mid_a: [@@testproject+//:leaf, @@testproject+//:mid_a]' $(location :dict_labels) && " +
          "grep -qF 'second -> @@testproject+//:leaf: [@@testproject+//:leaf]' $(location :dict_labels) && " +
          "grep -qF 'dict_top: [@@testproject+//:leaf, @@testproject+//:mid_a, @@testproject+//:dict_top]' $(location :dict_node_labels) && " +
          "grep -qF 'marked_top: [@@testproject+//:marked_inner, @@testproject+//:marked_mid, @@testproject+//:marked_top]' $(location :marked_labels) && " +
          "! grep -q 'marked_leaf' $(location :marked_labels) && " +
          "grep -qF 'resolved=probe-value optional=True' $(location :toolchain_probe) && " +
          "grep -qF 'FileWrite -> action_edges_node.write.txt[F]' $(location :action_edges) && " +
          "grep -qF 'MakeDirectory -> action_edges_node.dir[D]' $(location :action_edges) && " +
          "grep -qF 'Symlink -> action_edges_node.sym[L]' $(location :action_edges) && " +
          "grep -qF 'Symlink -> action_edges_node.symfile[F]' $(location :action_edges) && " +
          "grep -q 'Hello from patched bonanza' $(location :hello) && " +
          "grep -q 'module=testproject' $(location :repo_info) && " +
          "grep -q 'version=None' $(location :repo_info) && " +
          "grep -q 'repo=\"testproject+\"' $(location :repo_info) && " +
          "grep -q 'repository_name=\"@testproject+\"' $(location :repo_info) && " +
          "grep -q 'package=\"\"' $(location :repo_info) && " +
          "grep -q 'workspace_name=\"testproject+\"' $(location :repo_info) && " +
          "grep -q 'subpackages=\\[\"platforms\"\\]' $(location :repo_info) && " +
          "grep -q 'sum(\\[4, 5, 6\\]) = 15' $(location :repo_info) && " +
          "grep -q 'mode=transitioned' $(location :transitioned_mode) && " +
          "grep -q 'dep_mode=attr-sibling' $(location :attr_transitioned) && " +
          "grep -q 'self_mode=attr-incoming' $(location :self_transitioned) && " +
          "grep -q 'aspect_mode=attr-sibling' $(location :aspect_transitioned) && " +
          "cat $(location :hello) $(location :repo_info) $(location :transitioned_mode) > $@",
)

filegroup(
    name = "all",
    srcs = [
        ":action_edges",
        ":aspect_labels",
        ":aspect_transitioned",
        ":attr_transitioned",
        ":composed_aspects",
        ":dict_labels",
        ":dict_node_labels",
        ":hello",
        ":marked_labels",
        ":repo_info",
        ":self_transitioned",
        ":toolchain_probe",
        ":transitioned_mode",
        ":verify",
        ":verify_repo_conformance",
    ],
)
