module(
    name = "testproject",
    version = "1.2.3",
)

# Supply concrete versions for the versionless dependencies declared by
# @bazel_tools, mirroring what bb-storage gets transitively.
bazel_dep(name = "apple_support", version = "2.3.0")
bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "protobuf", version = "35.0")
bazel_dep(name = "rules_cc", version = "0.2.14")
bazel_dep(name = "rules_java", version = "9.6.1")
bazel_dep(name = "rules_python", version = "2.0.3")
bazel_dep(name = "rules_shell", version = "0.8.0")

register_execution_platforms("//platforms:exec")

# Consumed by toolchain_probe_aspect in aspects.bzl through
# aspect(toolchains = ...).
register_toolchains("//:probe_toolchain")

conformance_ext = use_extension("//:repo_conformance.bzl", "conformance_ext")
conformance_ext.flavor(name = "vanilla")
use_repo(conformance_ext, "conformance")
